--- a/index.html
+++ b/index.html
@@ -1,91 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PG3D ULTIMATE 2026 | Next-Gen Gaming</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>PG3D ULTIMATE 2026 | EnesPG3D Elite</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <style>
         :root {
             --primary: #00f2ff;
-            --secondary: #7000ff;
-            --accent: #ff00c8;
-            --bg-deep: #020205;
-            --glass: rgba(255, 255, 255, 0.05);
-            --border: rgba(255, 255, 255, 0.1);
+            --secondary: #bc13fe;
+            --accent: #ff0055;
+            --dark: #05050a;
+            --neon-shadow: 0 0 15px rgba(0, 242, 255, 0.7);
         }
 
-        * {
+        body, html {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-            cursor: default;
-        }
-
-        body {
-            background-color: var(--bg-deep);
+            width: 100%;
+            height: 100%;
+            background: var(--dark);
             color: #fff;
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Rajdhani', sans-serif;
             overflow-x: hidden;
+            scroll-behavior: smooth;
         }
 
-        /* --- Starfield Canvas --- */
-        #starfield {
+        /* --- Animasyonlu Uzay ve Plazma Arka Planı --- */
+        #bg-canvas {
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
             z-index: -1;
-            background: radial-gradient(circle at center, #0a0a1a 0%, #020205 100%);
         }
 
-        /* --- Navigation --- */
+        /* --- Gelişmiş Navigasyon --- */
         nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            padding: 25px 8%;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 20px 5%;
+            background: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(20px);
+            border-bottom: 2px solid var(--primary);
+            position: fixed;
+            width: 100%;
+            box-sizing: border-box;
             z-index: 1000;
-            background: rgba(0, 0, 0, 0.3);
-            backdrop-filter: blur(15px);
-            border-bottom: 1px solid var(--border);
         }
 
         .logo {
             font-family: 'Orbitron', sans-serif;
-            font-weight: 900;
             font-size: 1.8rem;
-            letter-spacing: 3px;
-            background: linear-gradient(90deg, var(--primary), var(--secondary));
+            font-weight: 900;
+            background: linear-gradient(to right, var(--primary), var(--secondary));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 20px rgba(0, 242, 255, 0.3);
+            filter: drop-shadow(0 0 5px var(--primary));
         }
 
-        .nav-links a {
-            color: #fff;
-            text-decoration: none;
-            margin-left: 30px;
-            font-weight: 600;
-            font-size: 0.9rem;
-            letter-spacing: 1px;
-            transition: 0.3s;
-            text-transform: uppercase;
-        }
-
-        .nav-links a:hover {
-            color: var(--primary);
-            text-shadow: 0 0 10px var(--primary);
-        }
-
-        /* --- Hero Section --- */
+        /* --- Hero Section (Giriş) --- */
         .hero {
             height: 100vh;
             display: flex;
@@ -93,269 +68,231 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 0 20px;
+            background: radial-gradient(circle, transparent 20%, var(--dark) 80%);
         }
 
-        .hero-title {
+        .hero h1 {
             font-family: 'Orbitron', sans-serif;
             font-size: clamp(3rem, 10vw, 6rem);
-            font-weight: 900;
-            line-height: 1;
-            margin-bottom: 20px;
-            animation: glow 3s infinite alternate;
+            margin: 0;
+            text-transform: uppercase;
+            letter-spacing: 10px;
+            animation: pulse 2s infinite alternate;
         }
 
-        @keyframes glow {
-            from { text-shadow: 0 0 10px var(--primary), 0 0 20px var(--secondary); }
-            to { text-shadow: 0 0 20px var(--primary), 0 0 40px var(--secondary), 0 0 60px var(--accent); }
+        @keyframes pulse {
+            from { text-shadow: 0 0 10px var(--primary); transform: scale(1); }
+            to { text-shadow: 0 0 30px var(--secondary), 0 0 50px var(--accent); transform: scale(1.02); }
         }
 
-        .hero-subtitle {
+        .hero-stats {
+            display: flex;
+            gap: 30px;
+            margin-top: 20px;
             font-size: 1.2rem;
-            color: rgba(255, 255, 255, 0.7);
-            max-width: 700px;
-            letter-spacing: 2px;
-            margin-bottom: 40px;
-        }
-
-        .cta-btn {
-            padding: 18px 45px;
-            font-family: 'Orbitron', sans-serif;
+            color: var(--primary);
             font-weight: bold;
-            text-decoration: none;
-            color: #fff;
-            background: linear-gradient(45deg, var(--secondary), var(--accent));
-            border-radius: 50px;
-            box-shadow: 0 10px 30px rgba(112, 0, 255, 0.4);
-            transition: 0.4s;
-            border: none;
-            cursor: pointer;
             text-transform: uppercase;
         }
 
-        .cta-btn:hover {
-            transform: scale(1.1) translateY(-5px);
-            box-shadow: 0 15px 40px rgba(255, 0, 200, 0.6);
+        /* --- PG3D Silah Kartları --- */
+        .weapon-section {
+            padding: 100px 5%;
         }
 
-        /* --- Content Sections --- */
-        section {
-            padding: 100px 10%;
-            position: relative;
-        }
-
-        .section-header {
-            text-align: center;
-            margin-bottom: 80px;
-        }
-
-        .section-header h2 {
+        .section-title {
             font-family: 'Orbitron', sans-serif;
-            font-size: 3rem;
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 50px;
             color: var(--primary);
-            margin-bottom: 10px;
         }
 
-        /* --- Grid System --- */
-        .grid {
+        .weapon-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
+            gap: 40px;
         }
 
-        .card {
-            background: var(--glass);
-            padding: 40px;
-            border-radius: 20px;
-            border: 1px solid var(--border);
-            backdrop-filter: blur(10px);
-            transition: 0.4s;
+        .weapon-card {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid var(--primary);
+            border-radius: 15px;
+            padding: 20px;
             position: relative;
+            transition: 0.5s;
             overflow: hidden;
+            backdrop-filter: blur(10px);
         }
 
-        .card:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: var(--primary);
-            transform: translateY(-10px);
+        .weapon-card:hover {
+            transform: translateY(-15px) rotateX(10deg);
+            border-color: var(--secondary);
+            box-shadow: 0 0 40px rgba(188, 19, 254, 0.4);
         }
 
-        .card i {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            background: linear-gradient(45deg, var(--primary), var(--secondary));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-
-        .card h3 {
+        .weapon-card h3 {
             font-family: 'Orbitron', sans-serif;
+            font-size: 1.5rem;
+            color: var(--primary);
             margin-bottom: 15px;
-            color: #fff;
+        }
+
+        .stat-bar {
+            height: 8px;
+            background: #222;
+            border-radius: 4px;
+            margin: 10px 0;
+            position: relative;
+        }
+
+        .stat-fill {
+            height: 100%;
+            background: linear-gradient(90deg, var(--primary), var(--secondary));
+            border-radius: 4px;
+            box-shadow: 0 0 10px var(--primary);
         }
 
         /* --- Footer --- */
         footer {
-            padding: 80px 10% 40px;
-            background: rgba(0, 0, 0, 0.8);
-            border-top: 1px solid var(--border);
+            padding: 50px;
             text-align: center;
+            border-top: 1px solid #222;
+            background: #000;
         }
 
-        .social-icons a {
-            font-size: 1.5rem;
-            color: #fff;
-            margin: 0 15px;
-            transition: 0.3s;
-        }
-
-        .social-icons a:hover {
+        .btn-ultimate {
+            padding: 15px 40px;
+            font-family: 'Orbitron', sans-serif;
+            background: transparent;
             color: var(--primary);
-            transform: scale(1.3);
+            border: 2px solid var(--primary);
+            cursor: pointer;
+            transition: 0.3s;
+            text-transform: uppercase;
+            font-weight: bold;
+            text-decoration: none;
+            display: inline-block;
+            margin-top: 20px;
         }
 
-        .copyright {
-            margin-top: 40px;
-            font-size: 0.8rem;
-            color: rgba(255, 255, 255, 0.4);
-            letter-spacing: 2px;
+        .btn-ultimate:hover {
+            background: var(--primary);
+            color: #000;
+            box-shadow: 0 0 30px var(--primary);
         }
-
-        /* --- Scroll Animation --- */
-        .reveal {
-            opacity: 0;
-            transform: translateY(30px);
-            transition: 1s all ease;
-        }
-
-        .reveal.active {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
     </style>
 </head>
 <body>
 
-    <canvas id="starfield"></canvas>
+    <canvas id="bg-canvas"></canvas>
 
     <nav>
-        <div class="logo">PG3D ULTIMATE</div>
-        <div class="nav-links">
-            <a href="#home">Core</a>
-            <a href="#features">Tech</a>
-            <a href="#vision">Vision</a>
-            <a href="https://enespg3d.github.io/pg3d-ultimate-2026/">Live Site</a>
-        </div>
+        <div class="logo">ENESPG3D // ULTIMATE</div>
+        <div style="font-weight: bold; color: var(--accent);">VERSION 2026.4.0</div>
     </nav>
 
-    <section class="hero" id="home">
-        <h1 class="hero-title">ENESP<span style="color:var(--primary)">G3D</span></h1>
-        <p class="hero-subtitle">Engineering the ultimate digital ecosystem of 2026. Higher performance, deeper immersion, absolute dominance.</p>
-        <a href="#features" class="cta-btn">Initiate Protocol</a>
+    <section class="hero">
+        <p style="letter-spacing: 5px; color: var(--primary);">PROTOCOL INITIATED</p>
+        <h1>PIXEL GUN 3D</h1>
+        <div class="hero-stats">
+            <span><i class="fas fa-crosshairs"></i> ELITE SNIPER</span>
+            <span><i class="fas fa-shield-virus"></i> MAX ARMOR</span>
+            <span><i class="fas fa-trophy"></i> CHAMPION</span>
+        </div>
+        <a href="#weapons" class="btn-ultimate">SİLAH ARŞİVİNE GİR</a>
     </section>
 
-    <section id="features">
-        <div class="section-header reveal">
-            <h2>SYSTEM SPECS</h2>
-            <p>Built for those who demand perfection.</p>
-        </div>
-        <div class="grid">
-            <div class="card reveal">
-                <i class="fas fa-microchip"></i>
-                <h3>Quantum Logic</h3>
-                <p>Powered by advanced algorithms that predict user intent before the first click.</p>
+    <section class="weapon-section" id="weapons">
+        <h2 class="section-title">ULTIMATE EKİPMANLAR</h2>
+        <div class="weapon-grid">
+            <div class="weapon-card">
+                <h3>ULTIMATUM 2026</h3>
+                <p>Hasar: <span style="float:right">MAX</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 100%;"></div></div>
+                <p>Atış Hızı: <span style="float:right">65</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 65%;"></div></div>
+                <p>Hareket: <span style="float:right">85</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 85%;"></div></div>
             </div>
-            <div class="card reveal">
-                <i class="fas fa-rocket"></i>
-                <h3>Warp Speed</h3>
-                <p>Zero latency infrastructure deployed via GitHub Pages for global accessibility.</p>
+
+            <div class="weapon-card">
+                <h3>PROTOTYPE X</h3>
+                <p>Hasar: <span style="float:right">98</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 98%;"></div></div>
+                <p>Atış Hızı: <span style="float:right">40</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 40%;"></div></div>
+                <p>Duvar Delme: <span style="float:right">YES</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 100%; background: var(--accent);"></div></div>
             </div>
-            <div class="card reveal">
-                <i class="fas fa-user-shield"></i>
-                <h3>Void Security</h3>
-                <p>Encryption levels that make your data invisible to external threats.</p>
+
+            <div class="weapon-card">
+                <h3>CRYSTAL LASER</h3>
+                <p>Hasar: <span style="float:right">75</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 75%;"></div></div>
+                <p>Atış Hızı: <span style="float:right">99</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 99%;"></div></div>
+                <p>Dondurma: <span style="float:right">AKTİF</span></p>
+                <div class="stat-bar"><div class="stat-fill" style="width: 90%; background: var(--secondary);"></div></div>
             </div>
         </div>
     </section>
 
-    <section id="vision" style="text-align: center;">
-        <div class="card reveal" style="max-width: 900px; margin: 0 auto; background: linear-gradient(rgba(112,0,255,0.1), rgba(0,242,255,0.1));">
-            <h2 style="font-family: 'Orbitron'; color: var(--accent);">THE 2026 VISION</h2>
-            <p style="font-size: 1.2rem; margin: 20px 0;">"The future isn't something we wait for; it's something we code." PG3D Ultimate is a testament to the evolution of the web—a place where gaming aesthetics meet professional-grade architecture.</p>
-            <div style="display: flex; justify-content: space-around; margin-top: 30px;">
-                <div><h2 style="color: var(--primary);">99%</h2><p>Stability</p></div>
-                <div><h2 style="color: var(--primary);">2026</h2><p>Tech Ready</p></div>
-                <div><h2 style="color: var(--primary);">∞</h2><p>Scalability</p></div>
-            </div>
+    <footer id="contact">
+        <p>&copy; 2026 ENESPG3D | ULTIMATE PIXEL WORLD</p>
+        <div style="margin-top: 20px; font-size: 1.5rem;">
+            <i class="fab fa-discord" style="margin: 0 15px; cursor: pointer;"></i>
+            <i class="fab fa-youtube" style="margin: 0 15px; cursor: pointer;"></i>
+            <i class="fab fa-github" style="margin: 0 15px; cursor: pointer;"></i>
         </div>
-    </section>
-
-    <footer>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-discord"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-        <p class="copyright">DESIGNED BY ENESPG3D &copy; 2026 | ALL SYSTEMS OPERATIONAL</p>
     </footer>
 
     <script>
-        /* --- STARFIELD LOGIC --- */
-        const canvas = document.getElementById('starfield');
+        // --- Ultra Gerçekçi Yıldız ve Plazma Motoru ---
+        const canvas = document.getElementById('bg-canvas');
         const ctx = canvas.getContext('2d');
-        let stars = [];
-        const numStars = 400;
+        let particles = [];
 
-        function initCanvas() {
+        function init() {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
-            stars = [];
-            for (let i = 0; i < numStars; i++) {
-                stars.push({
+            particles = [];
+            for (let i = 0; i < 150; i++) {
+                particles.push({
                     x: Math.random() * canvas.width,
                     y: Math.random() * canvas.height,
-                    size: Math.random() * 2,
-                    speed: Math.random() * 0.5 + 0.1
+                    size: Math.random() * 2 + 1,
+                    speedX: (Math.random() - 0.5) * 0.5,
+                    speedY: (Math.random() - 0.5) * 0.5,
+                    color: Math.random() > 0.5 ? '#00f2ff' : '#bc13fe'
                 });
             }
         }
 
-        function drawStars() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.fillStyle = '#fff';
-            stars.forEach(star => {
+        function animate() {
+            ctx.fillStyle = 'rgba(5, 5, 10, 0.2)';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+            particles.forEach(p => {
+                ctx.fillStyle = p.color;
+                ctx.shadowBlur = 10;
+                ctx.shadowColor = p.color;
                 ctx.beginPath();
-                ctx.arc(star.x, star.y, star.size, 0, Math.PI * 2);
+                ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
                 ctx.fill();
-                star.y += star.speed;
-                if (star.y > canvas.height) star.y = 0;
+
+                p.x += p.speedX;
+                p.y += p.speedY;
+
+                if (p.x < 0 || p.x > canvas.width) p.speedX *= -1;
+                if (p.y < 0 || p.y > canvas.height) p.speedY *= -1;
             });
-            requestAnimationFrame(drawStars);
+            requestAnimationFrame(animate);
         }
 
-        window.addEventListener('resize', initCanvas);
-        initCanvas();
-        drawStars();
-
-        /* --- REVEAL ON SCROLL --- */
-        function reveal() {
-            var reveals = document.querySelectorAll(".reveal");
-            for (var i = 0; i < reveals.length; i++) {
-                var windowHeight = window.innerHeight;
-                var elementTop = reveals[i].getBoundingClientRect().top;
-                var elementVisible = 150;
-                if (elementTop < windowHeight - elementVisible) {
-                    reveals[i].classList.add("active");
-                }
-            }
-        }
-        window.addEventListener("scroll", reveal);
-
-        // Initial check
-        reveal();
+        window.addEventListener('resize', init);
+        init();
+        animate();
     </script>
 </body>
-        </html>
-        
+</html>
